[package]
name = "primeutils"
version = "0.1.0"
edition = "2021"
authors = ["Vidi <125580894+Vidi0@users.noreply.github.com>"]
repository = "https://github.com/Vidi0/primeutils"
readme = "README.md"
description = "A collection of tools for working with prime numbers."
license = "GPL-3.0-or-later"
license-file = "LICENSE"

[dependencies]
num_cpus = { version = "1.16.0" , optional = true }
raw-cpuid = { version = "11.2.0" , optional = true }

[features]
default = ["get_cpu_info"]
get_cpu_info = ["dep:num_cpus", "dep:raw-cpuid"]